apply plugin: 'java-library'

buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "net.serenity-bdd:serenity-gradle-plugin:${gradlePlugin}"
    }
}

apply plugin: 'net.serenity-bdd.serenity-gradle-plugin'

repositories {
    mavenLocal()
    mavenCentral()
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

sourceCompatibility = 21
targetCompatibility = 21

dependencies {
    implementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}"
    implementation "net.serenity-bdd:serenity-junit:${serenityCoreVersion}"
    implementation "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}"
    implementation "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}"
    implementation "net.serenity-bdd:serenity-cucumber:${serenityCoreVersion}"
    implementation "net.serenity-bdd:serenity-ensure:${Ensure}"
    implementation "org.assertj:assertj-core:${assertJVersion}"
    implementation "org.apache.poi:poi:${poi}"
    implementation "org.apache.poi:poi-ooxml:${poi}"
    implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
    implementation "io.github.bonigarcia:webdrivermanager:${bonigarcia}"
    implementation("com.epam.healenium:healenium-web:${healeniumVersion}") {
        exclude group: 'com.google.inject', module: 'guice'
    }
    implementation 'com.google.inject:guice:5.1.0'
}

test {
    useJUnit {
        include "**/*"
        gradle.startParameter.continueOnFailure = true
        testLogging.showStandardStreams = true
        systemProperties System.getProperties()
        systemProperty "cucumber.filter.tags", System.getProperty("cucumber.filter.tags")
    }
    jvmArgs([
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/java.text=ALL-UNNAMED',
        '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED'
    ])
    finalizedBy 'aggregate'
}
